@@ -314,7 +314,7 @@ suite("tools/windows shell assets", () => {
     assert(/Run Adapter Doctor/.test(panelText), "expected launchpad doctor adapter action");
     assert(/Run Adapter Doctor \(Strict\)/.test(panelText), "expected launchpad doctor strict adapter action");
     assert(panelText.includes("(?m)^\\[([A-Z0-9_]+)\\]"), "expected adapter doctor reason-code parsing from bracketed output");
-    assert(panelText.includes("strict\\.reasons=([A-Z0-9_,-]+)"), "expected adapter doctor strict.reasons parsing fallback");
+    assert(panelText.includes("strict\\.reasons=([A-Z0-9_, -]+)"), "expected adapter doctor strict.reasons parsing fallback");
     assert(/Repair Viewer/.test(panelText), "expected launchpad doctor repair viewer action");
     assert(/Copy Doctor Output/.test(panelText), "expected launchpad doctor copy action");
     assert(/Shell doctor exitCode=/.test(panelText), "expected shell doctor output header");
