@@ -23,6 +23,7 @@ Included
 - Launchpad shortcut/history list ordering now uses deterministic UTF-8 byte-key sorting (`Get-StableSortKey`) instead of locale-sensitive `Sort-Object Name`.
 - Release ops publish candidate discovery now uses deterministic UTF-8 byte-key sorting (`Get-StableSortKey`) instead of locale-sensitive `Sort-Object FullName`.
 - Launchpad shell doctor fail-code parsing now anchors to full `ShellDoctorStatus: FAIL code=...` lines for stricter deterministic code extraction.
+- Launchpad adapter doctor `strict.reasons=` fallback parsing now accepts spaced reason lists and validates extracted code tokens before surfacing them.
 - Launchpad History successful report open now resets viewer startup state (`UseReportViewer=1`, `ReportViewerAutoOpen=1`, `ReportViewerStartFailCount=0`) so manual viewer opens self-heal auto-open disable state.
 - Evidence typing added to operator reports (additive, non-breaking):
 - `report_card.txt` now includes an evidence legend and claim mapping lines:
